--- a/url.html
+++ b/url.html
@@ -8,7 +8,7 @@
 </head>
 <body>
     <div class="container">
-        <h1>Cute URL Shortener</h1>
+        <h1>URL Shortener</h1>
         <input type="text" id="urlInput" placeholder="Drop your URL">
         <button id="shortenButton">Shorten</button>
         <div id="result" class="result"></div>
