--- a/index.html
+++ b/index.html
@@ -3,9 +3,132 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Home</title>
+    <title>Useless Project</title>
+    <link href="https://fonts.googleapis.com/css2?family=Press+Start+2P&display=swap" rel="stylesheet">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <style>
+        body {
+            background-color: #000; /* Black background for contrast */
+            color: #ff69b4; /* Bright pink text color */
+            font-family: 'Press Start 2P', cursive; /* Pixel-style font */
+            display: flex;
+            flex-direction: column;
+            justify-content: center;
+            align-items: center;
+            height: 100vh;
+            margin: 0;
+        }
+
+        h1 {
+            margin-bottom: 30px; /* Space below the heading */
+            font-size: 2.5em; /* Font size for the heading */
+            white-space: nowrap; /* Prevent wrapping */
+            overflow: hidden; /* Hide overflow */
+            border-right: 3px solid #ff69b4; /* Typing cursor */
+            animation: blink 0.75s step-end infinite; /* Cursor blinking */
+        }
+
+        @keyframes blink {
+            50% {
+                border-color: transparent; /* Make the cursor disappear */
+            }
+        }
+
+        .button {
+            background-color: #333; /* Dark button background */
+            color: #ff69b4; /* Bright pink text color */
+            border: 2px solid #ff69b4; /* Pink border */
+            padding: 15px 30px; /* Padding around the button */
+            text-align: center; /* Center the text */
+            font-size: 1.5em; /* Button font size */
+            margin: 10px 0; /* Space between buttons */
+            cursor: pointer; /* Pointer cursor on hover */
+            transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+        }
+
+        .button:hover {
+            background-color: #ff69b4; /* Change background on hover */
+            color: #000; /* Change text color on hover */
+        }
+    </style>
 </head>
-<body>
-    
+<body id="bg1">
+    <h1 id="typing-header"></h1>
+    <div>
+        <button class="button">Submit</button>
+        <button class="button">Submit</button>
+        <button class="button">Submit</button>
+        <button class="button">Submit</button>
+        <button class="button">Submit</button>
+    </div>
+    <div class="row row-cols-1 row-cols-md-2 g-4">
+        <div class="col">
+          <div class="card">
+            <img src="img/pokkie.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Yes or No?</h5>
+              <p class="card-text">Tell me if you are feeling a YES or NO, just kidding never say no plzzz!!</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="img/pepe.png" class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
+            </div>
+          </div>
+        </div>
+        <div class="col">
+          <div class="card">
+            <img src="..." class="card-img-top" alt="...">
+            <div class="card-body">
+              <h5 class="card-title">Card title</h5>
+              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+         <!-- scri[pt] -->
+   <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
+   <script src="https://cdn.jsdelivr.net/npm/vanta@latest/dist/vanta.halo.min.js"></script>
+   <script>
+   VANTA.HALO({
+     el: "#bg1",
+     mouseControls: true,
+     touchControls: true,
+     gyroControls: false,
+     minHeight: 200.00,
+     minWidth: 200.00,
+     backgroundColor: 0x0
+   })
+
+    //   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script>
+        const headerText = "Useless Project!";
+        const typingHeader = document.getElementById("typing-header");
+        let index = 0;
+
+        function type() {
+            if (index < headerText.length) {
+                typingHeader.innerHTML += headerText.charAt(index);
+                index++;
+                setTimeout(type, 100); // Type character every 100ms
+            }
+        }
+
+        type(); // Start typing effect
+    </script>
 </body>
 </html>
