--- a/pepe-dino.html
+++ b/pepe-dino.html
@@ -7,7 +7,7 @@
 <script src="https://game-cdn.poki.com/scripts/v2/poki-sdk.js"></script>
 <style>
 body {
-  background-color: #000000;
+  background-color: #c746b6;
 }
 
 header {
