--- a/index.html
+++ b/index.html
@@ -55,50 +55,17 @@
 <body id="bg1">
     <h1 id="typing-header"></h1>
     <div>
-        <button class="button">Submit</button>
-        <button class="button">Submit</button>
-        <button class="button">Submit</button>
-        <button class="button">Submit</button>
-        <button class="button">Submit</button>
+       <a href="pookie.html"> <button class="button">Yes & NO</button></a>
+      <a href="car.html"> <button class="button">Car game</button></a> 
+       <a href="pepe-dino.html"> <button class="button">Pepe's Adventure</button></a>
+       <a href="story.html"><button class="button">Story teller</button></a> 
+       <a href="tic.html"><button class="button">Tic-Tac-Toe</button></a> 
+        <a href="url.html"><button class="button">Try URL</button></a><button class="button">Try URL</button>
+        <a href="time.html"><button class="button">Wanna waste time?</button></a>
+         <a href="cat.html"><button class="button">Talk to your cat</button>    </a>
+        <button class="button">DoggoGPT</button>
     </div>
-    <div class="row row-cols-1 row-cols-md-2 g-4">
-        <div class="col">
-          <div class="card">
-            <img src="img/pokkie.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Yes or No?</h5>
-              <p class="card-text">Tell me if you are feeling a YES or NO, just kidding never say no plzzz!!</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="img/pepe.png" class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content.</p>
-            </div>
-          </div>
-        </div>
-        <div class="col">
-          <div class="card">
-            <img src="..." class="card-img-top" alt="...">
-            <div class="card-body">
-              <h5 class="card-title">Card title</h5>
-              <p class="card-text">This is a longer card with supporting text below as a natural lead-in to additional content. This content is a little bit longer.</p>
-            </div>
-          </div>
-        </div>
-      </div>
+   
 
          <!-- scri[pt] -->
    <script src="https://cdnjs.cloudflare.com/ajax/libs/three.js/r134/three.min.js"></script>
