--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
         <a href="url.html"><button class="button">Try URL</button></a><button class="button">Try URL</button>
         <a href="time.html"><button class="button">Wanna waste time?</button></a>
          <a href="cat.html"><button class="button">Talk to your cat</button>    </a>
-        <button class="button">DoggoGPT</button>
+        <a href="doggo.html"><button class="button">DoggoGPT</button></a> 
+        <a href="pa.html"><button class="button">Mr Painter</button></a>
+        <a href="bubble.html"><button class="button">Bubble ain't got feelings?</button></a>
+        <a href="ki.html"><button class="button">Shower some Kindness!</button></a>
+        <a href="lc.html"><button class="button">Adore-o-Meter</button></a>
+       
     </div>
    
 
