--- a/pookie.html
+++ b/pookie.html
@@ -9,7 +9,7 @@
 
 </head>
 <body>
-  <h1 id="heading">Are you the guys who won "USELESS PROJECT" hosted by Tinkerhub😊???</h1>
+  <h1 id="heading">You guys won "USELESS PROJECT" hosted by Tinkerhub😊???</h1>
   <img id="image" src="https://i.pinimg.com/originals/7c/e9/17/7ce91772a64c9ddfb8ab952f5091c10c.gif" alt="Cute GIF">
   <div>
     <button id="yesButton">Yes</button>
