--- a/index.html
+++ b/index.html
@@ -8,9 +8,9 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <style>
         body {
-            background-color: #000; /* Black background for contrast */
-            color: #ff69b4; /* Bright pink text color */
-            font-family: 'Press Start 2P', cursive; /* Pixel-style font */
+            background-color: #000; 
+            color: #ff69b4; 
+            font-family: 'Press Start 2P', cursive; 
             display: flex;
             flex-direction: column;
             justify-content: center;
@@ -20,35 +20,35 @@
         }
 
         h1 {
-            margin-bottom: 30px; /* Space below the heading */
-            font-size: 2.5em; /* Font size for the heading */
-            white-space: nowrap; /* Prevent wrapping */
-            overflow: hidden; /* Hide overflow */
-            border-right: 3px solid #ff69b4; /* Typing cursor */
-            animation: blink 0.75s step-end infinite; /* Cursor blinking */
+            margin-bottom: 30px; 
+            font-size: 2.5em; 
+            white-space: nowrap; 
+            overflow: hidden; 
+            border-right: 3px solid #ff69b4; 
+            animation: blink 0.75s step-end infinite; 
         }
 
         @keyframes blink {
             50% {
-                border-color: transparent; /* Make the cursor disappear */
+                border-color: transparent; 
             }
         }
 
         .button {
-            background-color: #333; /* Dark button background */
-            color: #ff69b4; /* Bright pink text color */
-            border: 2px solid #ff69b4; /* Pink border */
-            padding: 15px 30px; /* Padding around the button */
-            text-align: center; /* Center the text */
-            font-size: 1.5em; /* Button font size */
-            margin: 10px 0; /* Space between buttons */
-            cursor: pointer; /* Pointer cursor on hover */
-            transition: background-color 0.3s, color 0.3s; /* Smooth transition */
+            background-color: #333; 
+            color: #ff69b4; 
+            border: 2px solid #ff69b4; 
+            padding: 15px 30px; 
+            text-align: center; 
+            font-size: 1.5em; 
+            margin: 10px 0; 
+            cursor: pointer; 
+            transition: background-color 0.3s, color 0.3s; 
         }
 
         .button:hover {
-            background-color: #ff69b4; /* Change background on hover */
-            color: #000; /* Change text color on hover */
+            background-color: #ff69b4; 
+            color: #000; 
         }
     </style>
 </head>
@@ -60,7 +60,7 @@
        <a href="pepe-dino.html"> <button class="button">Pepe's Adventure</button></a>
        <a href="story.html"><button class="button">Story teller</button></a> 
        <a href="tic.html"><button class="button">Tic-Tac-Toe</button></a> 
-        <a href="url.html"><button class="button">Try URL</button></a><button class="button">Try URL</button>
+        <a href="url.html"><button class="button">Try URL</button></a>
         <a href="time.html"><button class="button">Wanna waste time?</button></a>
          <a href="cat.html"><button class="button">Talk to your cat</button>    </a>
         <a href="doggo.html"><button class="button">DoggoGPT</button></a> 
@@ -88,7 +88,7 @@
 
     //   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script>
-        const headerText = "Useless Project!";
+        const headerText = "Useless Projects!";
         const typingHeader = document.getElementById("typing-header");
         let index = 0;
 
@@ -96,11 +96,11 @@
             if (index < headerText.length) {
                 typingHeader.innerHTML += headerText.charAt(index);
                 index++;
-                setTimeout(type, 100); // Type character every 100ms
+                setTimeout(type, 100); 
             }
         }
 
-        type(); // Start typing effect
+        type(); 
     </script>
 </body>
 </html>
