--- a/doggo.html
+++ b/doggo.html
@@ -26,7 +26,7 @@
   <div class="container">
     <nav>
       <div class="logo">
-        <p>PepeGPT</p>
+        <p>Doggo GPT</p>
       </div>
       <a id="delbtn" href="#"><span class="material-symbols-outlined">delete</span>
         <span class="navlabel">Clear Conversations</span></a>
