--- a/index.html
+++ b/index.html
@@ -68,6 +68,7 @@
         <a href="bubble.html"><button class="button">Bubble ain't got feelings?</button></a>
         <a href="ki.html"><button class="button">Shower some Kindness!</button></a>
         <a href="lc.html"><button class="button">Adore-o-Meter</button></a>
+        <a href="cl.html"><button class="button">DREAMING 'BOUT A CALCULATOR? COME ON!! STILL EXCITED ??...I GOT YOUR BACK</button></a>
        
     </div>
    
@@ -101,6 +102,7 @@
         }
 
         type(); 
+
     </script>
 </body>
 </html>
